  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash/race in terminal key press handler (LP: #205445)
    - fix encoding issue (LP: #208390)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix incorrect pango attribute assignment (LP: #207742)
  * UpdateManager/UpdateManager.py:
    - do not crash if gconf database is not writable (LP: #208687)
  * po/*.po:
    - make update-po

 --

update-manager (1:0.87.14) hardy; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - Fix typo
  * DistUpgrade/DistUpgradeViewKDE.py:
    - Add show/hide to upgrade package list
  * DistUpgrade/window_main.ui:
    - Sync strings with GTK frontend to pick up translations
    - Update icon to Oxygen
	
 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 21 Mar 2008 12:04:51 +0000

update-manager (1:0.87.13) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - only ask once about the sshd (LP: #156625)
  * DistUpgrade/DistUpgradeCache.py:
    - add hardyQuirks handler to deal with a
      gnome-translate upgrade issues (thanks to Daniel Holbach)
    - fix naming of the quirksHandlers
  * DistUpgrade/DistUpgrade.cfg:
    - add "ksplash-engine-moodin" to ForcedObsoletes
  * DistUpgrade/removal_blacklist.cfg:
    - add "^postgresql-.*"to the removal blacklist
  * DistUpgrade/DistUpgradeViewText.py:
    - flush() output in updateStatus()
    - show the demoted packages in a more readable
      manner
    - use textwrap when displaying text
  * DistUpgrade/DistUpgradeCache.py:
    - fix bug that prevented proper error message on 
      upgrade calculation error in the text frontend
    - fix text download progress
  * DistUpgrade/ReleaseAnnouncement
    - updated for BETA

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 20 Mar 2008 16:06:56 +0100

update-manager (1:0.87.12) hardy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix display of non-ascii chars
    - improve editing capabilities of the terminal (should be 
      fine with the readline fontend now)
