@@ -12,6 +12,7 @@ Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit
 RemovalBlacklistFile=removal_blacklist.cfg
 AllowUnauthenticated=yes
+PostInstallScripts=/usr/lib/udev/migrate-fstab-to-uuid.sh
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
