@@ -13,6 +13,7 @@ update-manager (1:0.87.15) hardy; urgency=low
     - fix incorrect pango attribute assignment (LP: #207742)
   * UpdateManager/UpdateManager.py:
     - do not crash if gconf database is not writable (LP: #208687)
+    - do not crash on BadStatusLine exceptions (LP: #204075)
   * po/*.po:
     - make update-po
 
